# CS-Career-Guide

./: .gitignore  DESCRIPTION.md  README.md  add_cyber_security_data.py  analyze_similarity.py  diagnose_arag.py  download_model.py  optimized_recommendations.json  pyproject.toml  requirements.txt  show_cosine_similarity.py  test.py  test_career_recommendation.py  test_semantic_similarity.py  update_self_introduction.js
backend/: check_db.py  check_db_data.py  check_db_structure.py  check_empty_tables.py  check_lancedb.py  create_ai_tables.sql  create_career_paths_tables.sql  create_career_tables.sql  create_longterm_memory.sql  create_multi_field_index.py  create_remaining_tables.sql  create_tables.sql  debug_full_flow.py  debug_full_recommendation_flow.py  debug_graph_flow.py  debug_lancedb.py  debug_launcher.py  debug_recommendation_agent.py  debug_recommendation_full.py  debug_semantic_search.py  debug_tool_binding.py  delete_job_fairs.py  import_job_fairs.py  list_users.py  manage.py  reset_password.py  run_tests.py  show_tables.py  simple_recommendation.py  sync_recommendations.py  test_adjusted_threshold.py  test_api.py  test_arag.py  test_arag_search.py  test_career_categories.py  test_debug.py  test_direct.py  test_full_recommendation.py  test_fulltext_index.py  test_langgraph_flow.py  (+11 more)
backend/ai_integration/: admin.py  apps.py  arag_agent.py  arag_integration.py  career_report_views.py  debug_multi_round.py  debug_recommendation_api.py  debug_recommendation_detailed.py  debug_recommendation_view.py  langgraph_views.py  models.py  optimized_views.py  search_tools.py  serializers.py  simple_recommendation_view.py  urls.py
backend/ai_integration/langgraph/: __init__.py
backend/ai_integration/migrations/: 0001_initial.py  0002_aitag_alter_aichatlog_content_and_more.py  0003_alter_aiusagerecord_usage_type_and_more.py  0004_alter_aiusagerecord_usage_type.py  0005_aichatpair.py  0006_delete_aichatlog.py  0007_aiprompt.py  0008_aiconversation_context_aware_and_more.py  0009_remove_careerrecommendationrecord_tags_and_more.py  0010_careerrecommendationrecord_analysis_result.py  0011_careerrecommendationrecord_introduction_preview.py  0012_senioradvice.py  0013_alter_aiprompt_prompt_type.py  0014_interviewreviewrecord.py
backend/asr/: asr.py  urls.py
backend/career_evaluation/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/career_evaluation/migrations/: 0001_initial.py  0002_computercareer.py  0003_computercareer_position_name.py
backend/career_paths/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/company_reviews/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/company_reviews/migrations/: 0001_initial.py  0002_companyinfo.py  0003_jobfair_alter_companyinfo_table.py  0004_alter_jobfair_options_alter_jobfair_contact_email_and_more.py  0005_remove_jobfair_contact_email_and_more.py  0006_alter_jobfair_options_jobfair_contact_email_and_more.py  0007_jobfair_university_url.py  (+2 more)
backend/cs_career_guide/: asgi.py  settings.py  urls.py  wsgi.py
backend/resumes/: admin.py  models.py  serializers.py  views.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
(+125 files in other folders)
