[project]
name = "cs-career-guide"
version = "1.0.0"
description = "计算机学院本科生就业指南 - 全栈职业指导平台，通过AI技术提供职业规划、面试模拟等服务"
authors = [
    { name = "CS Career Guide Team", email = "career@cs.edu.cn" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Education",
]
dependencies = [
    "Django==4.2.7",
    "djangorestframework==3.14.0",
    "django-cors-headers==4.3.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "langgraph==0.0.35",
    "langchain==0.1.0",
    "sentence-transformers==2.2.2",
    "lancedb==0.4.0",
    "pyarrow==15.0.0",
    "numpy==1.26.0",
    "jieba==0.42.1",
    "redis==5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "black",
    "flake8",
    "isort",
]
full = [
    "pytest",
    "pytest-django",
    "black",
    "flake8",
    "isort",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["frontend*", "tests*"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"